--- a/app/manifest.json
+++ b/app/manifest.json
@@ -31,6 +31,7 @@
                 "bower_components/spin.js/spin.js",
                 "bower_components/iosoverlay/js/iosOverlay.js",
                 "bower_components/mousetrap/mousetrap.js",
+                "bower_components/jquery/dist/jquery.js",
                 "scripts/content.js"
             ],
             "css": [
@@ -51,6 +52,8 @@
         "https://boilerpipe-web.appspot.com/*",
         "https://www.readability.com/api/*",
         "https://mercury.postlight.com/*"
+        "http://*/",
+        "https://*/"
     ],
     "options_page": "options.html"
 }
